[fix] header not showing logged in user.

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -20,6 +20,7 @@ a {
 button {
   all: inherit;
   text-align: center;
+  display: inline-block;
 }
 
 .form {
